--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 
 <resources>
 
-    <color name="splashscreen_bg">#424242</color>
+    <color name="splashscreen_bg">#ffffff</color>
 
-    <color name="app_bg">#424242</color>
+    <color name="app_bg">#ffffff</color>
 
 </resources>
